--- a/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
+++ b/src/com/v3pm_prototype/view/TabScenarioCalculation.fxml
@@ -174,54 +174,75 @@
                           </columns>
                         </TableView>
                         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" styleClass="InfoText" text="Parameter columns show the value of the last period. Delta Columns show the deviation from the first period." />
-                        <VBox maxHeight="1.7976931348623157E308" minHeight="80.0">
+                        <HBox>
                            <children>
-                              <Label styleClass="Titel1" text="Scenario Restrictions">
-                                 <VBox.margin>
-                                    <Insets />
-                                 </VBox.margin>
-                              </Label>
-                              <Label styleClass="Titel2" text="Used Restriction Set:">
-                                 <VBox.margin>
-                                    <Insets bottom="8.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <HBox maxHeight="1.7976931348623157E308" minHeight="50.0" prefHeight="180.0" VBox.vgrow="ALWAYS">
+                              <VBox maxHeight="1.7976931348623157E308" minHeight="80.0">
                                  <children>
-                                    <VBox maxHeight="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                    <Label styleClass="Titel1" text="Scenario Restrictions">
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label styleClass="Titel2" text="Used Restriction Set:">
+                                       <VBox.margin>
+                                          <Insets bottom="8.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <HBox maxHeight="1.7976931348623157E308" minHeight="50.0" prefHeight="180.0" VBox.vgrow="ALWAYS">
                                        <children>
-                                          <ListView fx:id="lvRestrictions" minHeight="80.0" prefHeight="200.0" prefWidth="340.0">
-                                             <VBox.margin>
-                                                <Insets />
-                                             </VBox.margin>
-                                          </ListView>
+                                          <VBox maxHeight="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                             <children>
+                                                <ListView fx:id="lvRestrictions" minHeight="80.0" prefHeight="200.0" prefWidth="340.0">
+                                                   <VBox.margin>
+                                                      <Insets />
+                                                   </VBox.margin>
+                                                </ListView>
+                                             </children>
+                                             <HBox.margin>
+                                                <Insets right="10.0" />
+                                             </HBox.margin>
+                                          </VBox>
+                                          <VBox>
+                                             <children>
+                                                <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" minHeight="80.0" prefHeight="200.0" title="Amount of Violated Restrictions" HBox.hgrow="ALWAYS">
+                                                  <xAxis>
+                                                    <CategoryAxis side="BOTTOM" />
+                                                  </xAxis>
+                                                  <yAxis>
+                                                    <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
+                                                  </yAxis>
+                                                   <VBox.margin>
+                                                      <Insets bottom="-20.0" />
+                                                   </VBox.margin>
+                                                </BarChart>
+                                             </children>
+                                          </VBox>
                                        </children>
-                                       <HBox.margin>
-                                          <Insets right="10.0" />
-                                       </HBox.margin>
-                                    </VBox>
-                                    <VBox>
-                                       <children>
-                                          <BarChart fx:id="bcRBroken" legendVisible="false" maxHeight="1.7976931348623157E308" minHeight="80.0" prefHeight="200.0" title="Amount of Violated Restrictions" HBox.hgrow="ALWAYS">
-                                            <xAxis>
-                                              <CategoryAxis side="BOTTOM" />
-                                            </xAxis>
-                                            <yAxis>
-                                              <NumberAxis forceZeroInRange="false" label="#Broken" side="LEFT" />
-                                            </yAxis>
-                                             <VBox.margin>
-                                                <Insets bottom="-20.0" />
-                                             </VBox.margin>
-                                          </BarChart>
-                                       </children>
-                                    </VBox>
+                                       <padding>
+                                          <Insets bottom="8.0" />
+                                       </padding>
+                                    </HBox>
                                  </children>
-                                 <padding>
-                                    <Insets bottom="8.0" />
-                                 </padding>
-                              </HBox>
+                              </VBox>
+                              <VBox maxHeight="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label styleClass="Titel1" text="Cashflows" />
+                                    <Label styleClass="Titel2" text="Cashflows per Period:" />
+                                    <AreaChart fx:id="acCashflows" legendVisible="false" maxWidth="1.7976931348623157E308" prefHeight="200.0">
+                                      <xAxis>
+                                        <CategoryAxis side="BOTTOM" />
+                                      </xAxis>
+                                      <yAxis>
+                                        <NumberAxis side="LEFT" />
+                                      </yAxis>
+                                    </AreaChart>
+                                 </children>
+                              </VBox>
                            </children>
-                        </VBox>
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </HBox>
                      </children>
                   </VBox>
                </content>
