--- a/src/com/v3pm_prototype/view/AddProject.fxml
+++ b/src/com/v3pm_prototype/view/AddProject.fxml
@@ -86,7 +86,7 @@
             </VBox>
          </content>
       </TitledPane>
-      <Button fx:id="btnAddProject" mnemonicParsing="false" onAction="#createProject" text="Add Project to Scenario" />
+      <Button fx:id="btnAddProject" mnemonicParsing="false" onAction="#createProject" text="Create Project" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
