--- a/src/com/v3pm_prototype/view/V3PMGUI.fxml
+++ b/src/com/v3pm_prototype/view/V3PMGUI.fxml
@@ -16,6 +16,7 @@
         <Menu mnemonicParsing="false" text="File">
           <items>
             <MenuItem fx:id="menuSettings" mnemonicParsing="false" text="Preferences…" />
+                  <MenuItem fx:id="menuSetDB" mnemonicParsing="false" text="Set Database... | V3PMDB.db" />
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem fx:id="menuQuit" mnemonicParsing="false" text="Quit" />
           </items>
